istio-yaml/fish.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fish-routing
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - appgw-gateway
  http:
    - match:
      - uri:
          exact: /fish
      route:
        - destination:
            host: fish
            subset: blue
          weight: 50
        - destination:
            host: fish
            subset: red
          weight: 50
      fault:
        abort:
          httpStatus: 503
          percentage:
            value: 25
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fish-rules
  namespace: default
spec:
  host: fish
  subsets:
    - labels:
        version: 1.0.0
      name: blue
    - labels:
        version: 2.0.0
      name: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fish-blue
spec:
  selector:
    matchLabels:
      app: fish
      version: 1.0.0
  replicas: 1
  template:
    metadata:
      labels:
        app: fish
        version: 1.0.0
    spec:
      containers:
      - name: fish
        image: gerbstralko/fish-golang:1.0.0
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fish
spec:
  selector:
    app: fish
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fish-red
spec:
  selector:
    matchLabels:
      app: fish
      version: 2.0.0
  replicas: 1
  template:
    metadata:
      labels:
        app: fish
        version: 2.0.0
    spec:
      containers:
      - name: fish
        image: gerbstralko/fish-golang:2.0.0
        imagePullPolicy: Always
